--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {
+   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.2",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.12.0",
+    "react-spinners": "^0.17.0",
+    "reactjs-popup": "^2.0.6",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
